Fix logo display in production deployment
- Revert logo paths back to /logo.png (correct for Vite public assets)
- Add loading='lazy' to all logo images for performance
- Fix vercel.json rewrite rules to exclude static assets
- Add specific headers for logo.png to ensure proper serving
- Optimize Vite config with explicit publicDir and base settings

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!logo\\.png|favicon\\.ico|assets/).*)",
       "destination": "/index.html"
     }
   ],
@@ -29,6 +29,19 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/logo.png",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
+        },
+        {
+          "key": "Content-Type",
+          "value": "image/png"
         }
       ]
     }
